// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        undefined,
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly with item 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        undefined,
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="accessibilityLabelActionSheetsItem"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderTopColor": "#D1D4DB",
            "borderTopWidth": 3,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginHorizontal": 24,
            "minHeight": 150,
            "paddingHorizontal": 60,
          },
          Object {
            "backgroundColor": "#FFF",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Inter-Regular",
                "fontSize": 45,
                "lineHeight": 57,
              },
              Object {
                "paddingVertical": 45,
              },
            ]
          }
        >
          title
        </Text>
      </View>
    </View>
  </View>
</View>
`;
